crates/ty_python_semantic/resources/mdtest/snapshots/1._unpacking.md_-_2._Unpacking_-_4._Exactly_too_many_val….snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: 1. unpacking.md - 2. Unpacking - 4. Exactly too many val…
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unpacking.md
---

# Python source files

## mdtest_snippet.py

```
1 | a, b = (1, 2, 3)  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Too many values to unpack
 --> src/mdtest_snippet.py:1:1
  |
1 | a, b = (1, 2, 3)  # error: [invalid-assignment]
  | ^^^^   --------- Got 3
  | |
  | Expected 2
  |
info: rule `invalid-assignment` is enabled by default

```
